# FRAMEFOLEY

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
demo/: jelly-relay-assets.json  jelly-relay-events.json
docs/: ARCHITECTURE.md  ASSET_PROVENANCE.md  AUDIO_QC.md  B2_OBJECTS.md  B2_STORAGE_AND_RECOVERY.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  GENBLAZE_USAGE.md  OWNER_CHECKLIST.md  OWNER_SETUP.md  PROVENANCE_MODEL.md  PROVIDERS_AND_MODELS.md  PROVIDER_MATRIX.md  SECURITY_AND_COST.md  SPIKE_PLAN.md  SPIKE_REPORT.md  THIRD_PARTY_NOTICES.md
evidence/final/: B2_OBJECT_MAP.json  CLEAN_BUILD.md  FAILURE_RECOVERY.md  LIVE_CALLS_SANITIZED.json  MANIFEST_VERIFICATION.json  PACKAGE_VERSIONS.json  PUBLIC_DEPLOYMENT.md  SECURITY_SCAN.md  SUMMARY.md  TEST_RESULTS.txt  checksums.sha256
evidence/paid-live-v2/: B2_OBJECT_MAP.json  SUMMARY.md  (+3 more)
scripts/: build_landing_preview.py  build_phase2_evidence.py  build_phase2_video.py  build_test_live_proof_fixture.py  finalize_evidence.py  generate_demo_clip.py  generate_fixture_wav.py  phase1_live_gate.py  publish_live_proof.py  run_paid_live_v2_securely.sh  run_phase0_live_securely.sh  run_phase1_live_securely.sh  run_phase2_proof_publish_securely.sh  secret_scan.py  verify_public_submission.py
tests/: conftest.py  test_config.py  test_failure_recovery.py  test_manifest_policy.py  test_object_keys.py  test_phase2_copy.py  test_qc.py  test_report.py
(+101 files in other folders)
