[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framefoley"
version = "1.0.0"
description = "FRAMEFOLEY provenance-backed gameplay sound-kit builder"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "genblaze-core==0.3.4",
  "genblaze-elevenlabs==0.3.1",
  "genblaze-s3==0.3.4",
  "jsonschema==4.26.0",
  "pillow==12.3.0",
  "python-multipart==0.0.32",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "httpx2==2.7.0",
  "mypy==1.17.1",
  "pip-tools==7.6.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.15.10",
  "setuptools==80.9.0",
  "types-jsonschema==4.26.0.20260518",
  "types-boto3[s3]==1.43.51",
  "wheel==0.45.1",
]

[project.scripts]
framefoley-spike = "framefoley_spike.cli:main"
framefoley-api = "framefoley_api.main:run"

[tool.setuptools.packages.find]
where = ["src", "services/api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests", "services/api/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src", "services/api"]
files = ["src", "services/api/framefoley_api", "scripts"]
exclude = ["tests"]
warn_unused_ignores = true
